news for this week and added a save to the tester location

--- a/editing_calendar_statement.ipynb
+++ b/editing_calendar_statement.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,16 +12,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'C:/Users/WilliamFetzner/AppData/Roaming/MetaQuotes/Terminal/0C2BFA140CA8FBEFEDCADDDEDD61AA24/tester/files/calendar_statement_2024_2_4.csv'"
+       "'C:/Users/WilliamFetzner/AppData/Roaming/MetaQuotes/Terminal/0C2BFA140CA8FBEFEDCADDDEDD61AA24/MQL4/Files/calendar_statement_2024_3_3.csv'"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -30,20 +30,20 @@
     "# import \"calendar_statement_\" + year + month + day + \".csv\" with year month and day being the date of last sunday\n",
     "# find the day  of the last sunday\n",
     "today = datetime.date.today()\n",
-    "sunday = today - datetime.timedelta(days=today.weekday() + 1)\n",
+    "sunday = today# - datetime.timedelta(days=today.weekday() + 1)\n",
     "year = sunday.year\n",
     "month = sunday.month\n",
     "day = sunday.day\n",
     "# import the file\n",
     "filename = \"C:/Users/WilliamFetzner/AppData/Roaming/MetaQuotes/Terminal/0C2BFA140CA8FBEFEDCADDDEDD61AA24/MQL4/Files/calendar_statement_\" + str(year) + '_' + str(month) + '_' +  str(day) + \".csv\"\n",
-    "# filename = \"C:/Users/WilliamFetzner/AppData/Roaming/MetaQuotes/Terminal/0C2BFA140CA8FBEFEDCADDDEDD61AA24/tester/files/calendar_statement_2024_2_4.csv\"\n",
+    "tester_location = \"C:/Users/WilliamFetzner/AppData/Roaming/MetaQuotes/Terminal/0C2BFA140CA8FBEFEDCADDDEDD61AA24/tester/files/calendar_statement_\" + str(year) + '_' + str(month) + '_' +  str(day) + \".csv\"\n",
     "df = pd.read_csv(filename)\n",
     "filename"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -76,120 +76,190 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2024.02.05 09:00:00</td>\n",
-       "      <td>(Germany) Balance of Trade</td>\n",
+       "      <td>2024.03.04 10:00:00</td>\n",
+       "      <td>(Spain) Unemployment Change</td>\n",
        "      <td>High</td>\n",
        "      <td>EUR</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2024.02.05 10:15:00</td>\n",
+       "      <td>2024.03.05 10:15:00</td>\n",
        "      <td>(Spain) HCOB Services PMI</td>\n",
        "      <td>High</td>\n",
        "      <td>EUR</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2024.02.05 10:45:00</td>\n",
+       "      <td>2024.03.05 10:45:00</td>\n",
        "      <td>(Italy) HCOB Services PMI</td>\n",
        "      <td>High</td>\n",
        "      <td>EUR</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2024.02.05 10:50:00</td>\n",
+       "      <td>2024.03.05 10:50:00</td>\n",
        "      <td>(France) HCOB Services PMI</td>\n",
        "      <td>High</td>\n",
        "      <td>EUR</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2024.02.05 10:55:00</td>\n",
+       "      <td>2024.03.05 10:55:00</td>\n",
        "      <td>(Germany) HCOB Services PMI</td>\n",
        "      <td>High</td>\n",
        "      <td>EUR</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>2024.02.05 11:00:00</td>\n",
+       "      <td>2024.03.05 11:00:00</td>\n",
        "      <td>(Euro Area) HCOB Services PMI</td>\n",
        "      <td>High</td>\n",
        "      <td>EUR</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>2024.02.05 16:45:00</td>\n",
+       "      <td>2024.03.05 16:45:00</td>\n",
        "      <td>(United States) S&amp;P Global Services PMI</td>\n",
        "      <td>High</td>\n",
        "      <td>USD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>2024.02.05 17:00:00</td>\n",
+       "      <td>2024.03.05 17:00:00</td>\n",
        "      <td>(United States) ISM Services PMI</td>\n",
        "      <td>High</td>\n",
        "      <td>USD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>2024.02.06 12:00:00</td>\n",
-       "      <td>(Euro Area) Retail Sales YoY</td>\n",
+       "      <td>2024.03.06 09:00:00</td>\n",
+       "      <td>(Germany) Balance of Trade</td>\n",
        "      <td>High</td>\n",
        "      <td>EUR</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>2024.02.06 12:00:00</td>\n",
-       "      <td>(Euro Area) Retail Sales MoM</td>\n",
+       "      <td>2024.03.06 12:00:00</td>\n",
+       "      <td>(Euro Area) Retail Sales YoY</td>\n",
        "      <td>High</td>\n",
        "      <td>EUR</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>2024.02.07 11:00:00</td>\n",
-       "      <td>(Italy) Retail Sales YoY</td>\n",
+       "      <td>2024.03.06 12:00:00</td>\n",
+       "      <td>(Euro Area) Retail Sales MoM</td>\n",
        "      <td>High</td>\n",
        "      <td>EUR</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
-       "      <td>2024.02.07 11:00:00</td>\n",
-       "      <td>(Italy) Retail Sales MoM</td>\n",
+       "      <td>2024.03.06 15:15:00</td>\n",
+       "      <td>(United States) ADP Employment Change</td>\n",
        "      <td>High</td>\n",
-       "      <td>EUR</td>\n",
+       "      <td>USD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
-       "      <td>2024.02.08 15:30:00</td>\n",
-       "      <td>(United States) Continuing Jobless Claims</td>\n",
+       "      <td>2024.03.06 17:00:00</td>\n",
+       "      <td>(United States) JOLTs Job Openings</td>\n",
        "      <td>High</td>\n",
        "      <td>USD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
-       "      <td>2024.02.08 15:30:00</td>\n",
-       "      <td>(United States) Initial Jobless Claims</td>\n",
+       "      <td>2024.03.06 17:00:00</td>\n",
+       "      <td>(United States) Fed Chair Powell Testimony</td>\n",
        "      <td>High</td>\n",
        "      <td>USD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
-       "      <td>2024.02.08 15:30:00</td>\n",
-       "      <td>(United States) Jobless Claims 4-week Average</td>\n",
+       "      <td>2024.03.07 15:15:00</td>\n",
+       "      <td>(Euro Area) Deposit Facility Rate</td>\n",
        "      <td>High</td>\n",
-       "      <td>USD</td>\n",
+       "      <td>EUR</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
-       "      <td>2024.02.09 09:00:00</td>\n",
-       "      <td>(Germany) CPI</td>\n",
+       "      <td>2024.03.07 15:15:00</td>\n",
+       "      <td>(Euro Area) ECB Interest Rate Decision</td>\n",
        "      <td>High</td>\n",
        "      <td>EUR</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
-       "      <td>2024.02.09 15:30:00</td>\n",
-       "      <td>(United States) CPI s.a</td>\n",
+       "      <td>2024.03.07 15:30:00</td>\n",
+       "      <td>(United States) Continuing Jobless Claims</td>\n",
+       "      <td>High</td>\n",
+       "      <td>USD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>2024.03.07 15:30:00</td>\n",
+       "      <td>(United States) Initial Jobless Claims</td>\n",
+       "      <td>High</td>\n",
+       "      <td>USD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>2024.03.07 15:30:00</td>\n",
+       "      <td>(United States) Jobless Claims 4-week Average</td>\n",
+       "      <td>High</td>\n",
+       "      <td>USD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>2024.03.07 15:45:00</td>\n",
+       "      <td>(Euro Area) ECB Press Conference</td>\n",
+       "      <td>High</td>\n",
+       "      <td>EUR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>2024.03.07 17:00:00</td>\n",
+       "      <td>(United States) Fed Chair Powell Testimony</td>\n",
+       "      <td>High</td>\n",
+       "      <td>USD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>2024.03.08 12:00:00</td>\n",
+       "      <td>(Euro Area) Employment Change QoQ</td>\n",
+       "      <td>High</td>\n",
+       "      <td>EUR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>2024.03.08 12:00:00</td>\n",
+       "      <td>(Euro Area) Employment Change YoY</td>\n",
+       "      <td>High</td>\n",
+       "      <td>EUR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>2024.03.08 15:30:00</td>\n",
+       "      <td>(United States) U-6 Unemployment Rate</td>\n",
+       "      <td>High</td>\n",
+       "      <td>USD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>2024.03.08 15:30:00</td>\n",
+       "      <td>(United States) Non Farm Payrolls</td>\n",
+       "      <td>High</td>\n",
+       "      <td>USD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>2024.03.08 15:30:00</td>\n",
+       "      <td>(United States) Unemployment Rate</td>\n",
+       "      <td>High</td>\n",
+       "      <td>USD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>2024.03.08 15:30:00</td>\n",
+       "      <td>(United States) Nonfarm Payrolls Private</td>\n",
        "      <td>High</td>\n",
        "      <td>USD</td>\n",
        "    </tr>\n",
@@ -199,23 +269,33 @@
       ],
       "text/plain": [
        "                   Date                                          Event Impact  \\\n",
-       "0   2024.02.05 09:00:00                     (Germany) Balance of Trade   High   \n",
-       "1   2024.02.05 10:15:00                      (Spain) HCOB Services PMI   High   \n",
-       "2   2024.02.05 10:45:00                      (Italy) HCOB Services PMI   High   \n",
-       "3   2024.02.05 10:50:00                     (France) HCOB Services PMI   High   \n",
-       "4   2024.02.05 10:55:00                    (Germany) HCOB Services PMI   High   \n",
-       "5   2024.02.05 11:00:00                  (Euro Area) HCOB Services PMI   High   \n",
-       "6   2024.02.05 16:45:00        (United States) S&P Global Services PMI   High   \n",
-       "7   2024.02.05 17:00:00               (United States) ISM Services PMI   High   \n",
-       "8   2024.02.06 12:00:00                   (Euro Area) Retail Sales YoY   High   \n",
-       "9   2024.02.06 12:00:00                   (Euro Area) Retail Sales MoM   High   \n",
-       "10  2024.02.07 11:00:00                       (Italy) Retail Sales YoY   High   \n",
-       "11  2024.02.07 11:00:00                       (Italy) Retail Sales MoM   High   \n",
-       "12  2024.02.08 15:30:00      (United States) Continuing Jobless Claims   High   \n",
-       "13  2024.02.08 15:30:00         (United States) Initial Jobless Claims   High   \n",
-       "14  2024.02.08 15:30:00  (United States) Jobless Claims 4-week Average   High   \n",
-       "15  2024.02.09 09:00:00                                  (Germany) CPI   High   \n",
-       "16  2024.02.09 15:30:00                        (United States) CPI s.a   High   \n",
+       "0   2024.03.04 10:00:00                    (Spain) Unemployment Change   High   \n",
+       "1   2024.03.05 10:15:00                      (Spain) HCOB Services PMI   High   \n",
+       "2   2024.03.05 10:45:00                      (Italy) HCOB Services PMI   High   \n",
+       "3   2024.03.05 10:50:00                     (France) HCOB Services PMI   High   \n",
+       "4   2024.03.05 10:55:00                    (Germany) HCOB Services PMI   High   \n",
+       "5   2024.03.05 11:00:00                  (Euro Area) HCOB Services PMI   High   \n",
+       "6   2024.03.05 16:45:00        (United States) S&P Global Services PMI   High   \n",
+       "7   2024.03.05 17:00:00               (United States) ISM Services PMI   High   \n",
+       "8   2024.03.06 09:00:00                     (Germany) Balance of Trade   High   \n",
+       "9   2024.03.06 12:00:00                   (Euro Area) Retail Sales YoY   High   \n",
+       "10  2024.03.06 12:00:00                   (Euro Area) Retail Sales MoM   High   \n",
+       "11  2024.03.06 15:15:00          (United States) ADP Employment Change   High   \n",
+       "12  2024.03.06 17:00:00             (United States) JOLTs Job Openings   High   \n",
+       "13  2024.03.06 17:00:00     (United States) Fed Chair Powell Testimony   High   \n",
+       "14  2024.03.07 15:15:00              (Euro Area) Deposit Facility Rate   High   \n",
+       "15  2024.03.07 15:15:00         (Euro Area) ECB Interest Rate Decision   High   \n",
+       "16  2024.03.07 15:30:00      (United States) Continuing Jobless Claims   High   \n",
+       "17  2024.03.07 15:30:00         (United States) Initial Jobless Claims   High   \n",
+       "18  2024.03.07 15:30:00  (United States) Jobless Claims 4-week Average   High   \n",
+       "19  2024.03.07 15:45:00               (Euro Area) ECB Press Conference   High   \n",
+       "20  2024.03.07 17:00:00     (United States) Fed Chair Powell Testimony   High   \n",
+       "21  2024.03.08 12:00:00              (Euro Area) Employment Change QoQ   High   \n",
+       "22  2024.03.08 12:00:00              (Euro Area) Employment Change YoY   High   \n",
+       "23  2024.03.08 15:30:00          (United States) U-6 Unemployment Rate   High   \n",
+       "24  2024.03.08 15:30:00              (United States) Non Farm Payrolls   High   \n",
+       "25  2024.03.08 15:30:00              (United States) Unemployment Rate   High   \n",
+       "26  2024.03.08 15:30:00       (United States) Nonfarm Payrolls Private   High   \n",
        "\n",
        "   Currency  \n",
        "0       EUR  \n",
@@ -229,15 +309,25 @@
        "8       EUR  \n",
        "9       EUR  \n",
        "10      EUR  \n",
-       "11      EUR  \n",
+       "11      USD  \n",
        "12      USD  \n",
        "13      USD  \n",
-       "14      USD  \n",
+       "14      EUR  \n",
        "15      EUR  \n",
-       "16      USD  "
+       "16      USD  \n",
+       "17      USD  \n",
+       "18      USD  \n",
+       "19      EUR  \n",
+       "20      USD  \n",
+       "21      EUR  \n",
+       "22      EUR  \n",
+       "23      USD  \n",
+       "24      USD  \n",
+       "25      USD  \n",
+       "26      USD  "
       ]
      },
-     "execution_count": 53,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,12 +342,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# save the df back to the file\n",
-    "df.to_csv(filename, index=False)"
+    "df.to_csv(filename, index=False)\n",
+    "# tester location\n",
+    "df.to_csv(tester_location, index=False)"
    ]
   }
  ],
