full data from 11_22

--- a/double3_sma_nb.ipynb
+++ b/double3_sma_nb.ipynb
@@ -49,17 +49,17 @@
     "# collect the actual data from csv file\n",
     "# filename = \"C:/Users/WilliamFetzner/Documents/Trading/DAT_XLSX_EURUSD_M1_2023.xlsx\"\n",
     "# exported from tickstory\n",
-    "# tickstory_11_15_22_11_14_23 = \"C:/Users/WilliamFetzner/Documents/Trading/EURUSD_11_15_22_to_11_14_23.csv\"\n",
+    "tickstory_11_15_22_11_14_23 = \"C:/Users/WilliamFetzner/Documents/Trading/EURUSD_11_15_22_to_11_14_23.csv\"\n",
     "tickstory_filename = \"C:/Users/WilliamFetzner/Documents/Trading/3mo_EURUSD.csv\"\n",
     "tickstory_latest = \"C:/Users/WilliamFetzner/Documents/Trading/EURUSD_2_13_to_3_6.csv\"\n",
     "# filename = \"C:/Users/WilliamFetzner/Documents/Trading/EURUSD1_2_10_24.csv\"\n",
     "# full_filename = \"C:/Users/WilliamFetzner/Documents/Trading/EURUSD1.csv\"\n",
     "# df = pd.read_csv(filename, header=None, names=['date', 'time', 'open', 'high', 'low', 'close', 'volume'])\n",
-    "# df_22_23 = pd.read_csv(tickstory_11_15_22_11_14_23)\n",
+    "df_22_23 = pd.read_csv(tickstory_11_15_22_11_14_23)\n",
     "df_1123_0224 = pd.read_csv(tickstory_filename)#, header=None, names=['Timestamp','Bid price','Ask price','Bid volume','Ask volume'])\n",
     "df_latest = pd.read_csv(tickstory_latest)\n",
     "# df_full = pd.read_csv(full_filename, header=None, names=['date', 'time', 'open', 'high', 'low', 'close', 'volume'])\n",
-    "print(len(df_1123_0224), len(df_latest))"
+    "print(len(df_22_23), len(df_1123_0224), len(df_latest))"
    ]
   },
   {
@@ -201,8 +201,8 @@
    ],
    "source": [
     "# add the latest data to the bottom of df\n",
-    "# df = pd.concat([df_22_23, df, df_latest])\n",
-    "df = pd.concat([df_1123_0224, df_latest])\n",
+    "df = pd.concat([df_22_23, df_1123_0224, df_latest])\n",
+    "# df = pd.concat([df_1123_0224, df_latest])\n",
     "df = df.reset_index(drop=True)\n",
     "# drop any duplicate rows\n",
     "df = df.drop_duplicates()\n",
@@ -895,6 +895,26 @@
     "renko_full_data = r_full.renko_df()\n",
     "# renko_full_data = fx.psar_from_data(renko_full_data, increment, maximum)\n",
     "renko_full_data.tail(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save renko to csv\n",
+    "renko_full_data.to_csv('renko_full_data.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# read in the renko data\n",
+    "renko_full_data = pd.read_csv('renko_full_data.csv')"
    ]
   },
   {
