validated the integrity of the tickdata. And added a condition to use the full dataset or just start with renko data

--- a/double3_sma_nb.ipynb
+++ b/double3_sma_nb.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,6 +26,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "use_full_data = False"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -34,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -48,23 +57,24 @@
    "source": [
     "# collect the actual data from csv file\n",
     "# filename = \"C:/Users/WilliamFetzner/Documents/Trading/DAT_XLSX_EURUSD_M1_2023.xlsx\"\n",
-    "# exported from tickstory\n",
-    "tickstory_11_15_22_11_14_23 = \"C:/Users/WilliamFetzner/Documents/Trading/EURUSD_11_15_22_to_11_14_23.csv\"\n",
-    "tickstory_filename = \"C:/Users/WilliamFetzner/Documents/Trading/3mo_EURUSD.csv\"\n",
-    "tickstory_latest = \"C:/Users/WilliamFetzner/Documents/Trading/EURUSD_2_13_to_3_6.csv\"\n",
-    "# filename = \"C:/Users/WilliamFetzner/Documents/Trading/EURUSD1_2_10_24.csv\"\n",
-    "# full_filename = \"C:/Users/WilliamFetzner/Documents/Trading/EURUSD1.csv\"\n",
-    "# df = pd.read_csv(filename, header=None, names=['date', 'time', 'open', 'high', 'low', 'close', 'volume'])\n",
-    "df_22_23 = pd.read_csv(tickstory_11_15_22_11_14_23)\n",
-    "df_1123_0224 = pd.read_csv(tickstory_filename)#, header=None, names=['Timestamp','Bid price','Ask price','Bid volume','Ask volume'])\n",
-    "df_latest = pd.read_csv(tickstory_latest)\n",
-    "# df_full = pd.read_csv(full_filename, header=None, names=['date', 'time', 'open', 'high', 'low', 'close', 'volume'])\n",
-    "print(len(df_22_23), len(df_1123_0224), len(df_latest))"
+    "if use_full_data:\n",
+    "    # exported from tickstory\n",
+    "    tickstory_11_15_22_11_14_23 = \"C:/Users/WilliamFetzner/Documents/Trading/EURUSD_11_15_22_to_11_14_23.csv\"\n",
+    "    tickstory_filename = \"C:/Users/WilliamFetzner/Documents/Trading/3mo_EURUSD.csv\"\n",
+    "    tickstory_latest = \"C:/Users/WilliamFetzner/Documents/Trading/EURUSD_2_13_to_3_6.csv\"\n",
+    "    # filename = \"C:/Users/WilliamFetzner/Documents/Trading/EURUSD1_2_10_24.csv\"\n",
+    "    # full_filename = \"C:/Users/WilliamFetzner/Documents/Trading/EURUSD1.csv\"\n",
+    "    # df = pd.read_csv(filename, header=None, names=['date', 'time', 'open', 'high', 'low', 'close', 'volume'])\n",
+    "    df_22_23 = pd.read_csv(tickstory_11_15_22_11_14_23)\n",
+    "    df_1123_0224 = pd.read_csv(tickstory_filename)#, header=None, names=['Timestamp','Bid price','Ask price','Bid volume','Ask volume'])\n",
+    "    df_latest = pd.read_csv(tickstory_latest)\n",
+    "    # df_full = pd.read_csv(full_filename, header=None, names=['date', 'time', 'open', 'high', 'low', 'close', 'volume'])\n",
+    "    print(len(df_22_23), len(df_1123_0224), len(df_latest))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -194,44 +204,46 @@
        "37745217  20240306 18:59:54:548    1.08995    1.08996        0.90        1.80"
       ]
      },
-     "execution_count": 221,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# add the latest data to the bottom of df\n",
-    "df = pd.concat([df_22_23, df_1123_0224, df_latest])\n",
-    "# df = pd.concat([df_1123_0224, df_latest])\n",
-    "df = df.reset_index(drop=True)\n",
-    "# drop any duplicate rows\n",
-    "df = df.drop_duplicates()\n",
-    "df.tail(10)\n"
+    "if use_full_data:    \n",
+    "    # add the latest data to the bottom of df\n",
+    "    df = pd.concat([df_22_23, df_1123_0224, df_latest])\n",
+    "    # df = pd.concat([df_1123_0224, df_latest])\n",
+    "    df = df.reset_index(drop=True)\n",
+    "    # drop any duplicate rows\n",
+    "    df = df.drop_duplicates()\n",
+    "    df.tail(10)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# convert date to datetime\n",
-    "df['datetime'] = pd.to_datetime(df['Timestamp'], format='%Y%m%d %H:%M:%S:%f')\n",
-    "# rename bid price to close\n",
-    "df.rename(columns={'Bid price':'close'}, inplace=True)\n",
-    "df_ready = df.set_index('datetime')\n",
-    "# adjust the datetime 7 hrs ahead to match market time\n",
-    "df_ready.index = df_ready.index + pd.Timedelta(hours=7)\n",
-    "# df_tick_ready_2024 = df_ready['2024-01-01':'2024-02-13']\n",
-    "# df_full['datetime'] = pd.to_datetime(df_full['date'] + ' ' + df_full['time'], format='%Y.%m.%d %H:%M')\n",
-    "# filter the data to just 2024\n",
-    "# df_full_2024 = fx.prep_data(df_full, 2024)\n",
-    "# ohlc = fx.prep_data(df, 2024)"
+    "if use_full_data: \n",
+    "    # convert date to datetime\n",
+    "    df['datetime'] = pd.to_datetime(df['Timestamp'], format='%Y%m%d %H:%M:%S:%f')\n",
+    "    # rename bid price to close\n",
+    "    df.rename(columns={'Bid price':'close'}, inplace=True)\n",
+    "    df_ready = df.set_index('datetime')\n",
+    "    # adjust the datetime 7 hrs ahead to match market time\n",
+    "    df_ready.index = df_ready.index + pd.Timedelta(hours=7)\n",
+    "    # df_tick_ready_2024 = df_ready['2024-01-01':'2024-02-13']\n",
+    "    # df_full['datetime'] = pd.to_datetime(df_full['date'] + ' ' + df_full['time'], format='%Y.%m.%d %H:%M')\n",
+    "    # filter the data to just 2024\n",
+    "    # df_full_2024 = fx.prep_data(df_full, 2024)\n",
+    "    # ohlc = fx.prep_data(df, 2024)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -330,14 +342,15 @@
        "[37555134 rows x 1 columns]"
       ]
      },
-     "execution_count": 223,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ohlc = df_ready[['close']]\n",
-    "ohlc"
+    "if use_full_data:     \n",
+    "    ohlc = df_ready[['close']]\n",
+    "    ohlc"
    ]
   },
   {
@@ -351,13 +364,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exploratory Data Analysis\n",
-    "To make sure that the PSAR and Impulse are correctly duplicated from Pinescript to python"
+    "# Exploratory Data Analysis"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,6 +406,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# drop 2023-12-26\n",
+    "# ohlc_fil = ohlc_fil.drop(ohlc_fil.loc['2023-12-26'].index)\n",
+    "# ohlc_fil"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # graph the index on the x axis and the diff on the y axis\n",
+    "# plt.scatter(ohlc_fil.index, ohlc_fil['diff'])\n",
+    "# # increase the size of the plot\n",
+    "# plt.gcf().set_size_inches(20, 10)\n",
+    "# plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # find the count distinct of diff per month\n",
+    "# ohlc_fil['diff'].resample('ME').nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 226,
    "metadata": {},
    "outputs": [],
@@ -402,235 +448,6 @@
     "# ohlc_march_23 = ohlc.loc['2023-03-23 14:00':'2023-03-23 18:00']\n",
     "# ohlc_march_23"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Calculations"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 227,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Calculate Impulse MACD\n",
-    "# df_impulse = fx.calc_impulse_macd(ohlc_dec_1_day_15_min)\n",
-    "# df_impulse"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 228,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # remove all rows with null values for sh\n",
-    "# df_impulse_no_sh_na = df_impulse.dropna(subset=['sh'])\n",
-    "# # find the max and min of sh\n",
-    "# sh_max = df_impulse_no_sh_na['sh'].max()\n",
-    "# sh_min = df_impulse_no_sh_na['sh'].min()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 229,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # remove all rows with null values for sb\n",
-    "# df_impulse_no_sb_na = df_impulse.dropna(subset=['sb'])\n",
-    "# # find the max and min of sb\n",
-    "# sb_max = df_impulse_no_sb_na['sb'].max()\n",
-    "# sb_min = df_impulse_no_sb_na['sb'].min()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 230,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# y_min = min(sh_min, sb_min)\n",
-    "# y_max = max(sh_max, sb_max)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 231,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # find crossover points of sh and sb by seeing when the sign of 'md' goes from being > 0 to < 0, or vice versa but don't include 0\n",
-    "# df_impulse['md_sign'] = np.sign(df_impulse['md'])\n",
-    "\n",
-    "# # crossover would be when 'md_sign' == 1 or -1 and the previous value of 'md_sign' was 0 or -1 or 1 respectively\n",
-    "# df_impulse['crossover'] = np.where((df_impulse['md_sign'] == 1) & ((df_impulse['md_sign'].shift(1) == 0) | (df_impulse['md_sign'].shift(1) == -1)), 1, \n",
-    "#                                 np.where((df_impulse['md_sign'] == -1) & ((df_impulse['md_sign'].shift(1) == 0) | (df_impulse['md_sign'].shift(1) == 1)), -1, 0))\n",
-    "\n",
-    "# # filter to just where crossover is not 0\n",
-    "# df_impulse_crossover = df_impulse.loc[df_impulse['crossover'] != 0]\n",
-    "# df_impulse_crossover"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 232,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # filter to between 1 am and 2 am\n",
-    "# df_impulse_signal_1_to_2 = df_impulse.between_time('8:30', '9:30')\n",
-    "# df_impulse_signal_1_to_2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 233,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def find_min_max(df, col):\n",
-    "    df_no_na = df.dropna(subset=[col])\n",
-    "    min = df_no_na[col].min()\n",
-    "    max = df_no_na[col].max()\n",
-    "    return min, max"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 234,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "# Assuming 'df_impulse' is your DataFrame and it has been processed by 'calc_impulse_macd' function\n",
-    "def impulse_graph(df_impulse, col1, col2):\n",
-    "    sh_min, sh_max = find_min_max(df_impulse, col1)\n",
-    "    sb_min, sb_max = find_min_max(df_impulse, col2)\n",
-    "    \n",
-    "    y_min = min(sh_min, sb_min)\n",
-    "    y_max = max(sh_max, sb_max)\n",
-    "    # Create a new figure\n",
-    "    fig, ax = plt.subplots()\n",
-    "\n",
-    "    # Plot the Impulse Histogram\n",
-    "    ax.plot(df_impulse[col1], label='ImpulseSignal', color='blue')\n",
-    "\n",
-    "    # Plot the Impulse MACD CD Signal\n",
-    "    ax.plot(df_impulse[col2], label='ImpulseMACDSignal', color='orange')\n",
-    "\n",
-    "    # change the x axis to be much smaller and go from the max of sh and sb to the min of sh and sb\n",
-    "    ax.set_ylim([y_min - 0.000001, y_max + 0.000001])\n",
-    "\n",
-    "    # Add legend\n",
-    "    ax.legend()\n",
-    "\n",
-    "    fig.set_size_inches(18.5, 10.5)\n",
-    "\n",
-    "    # Show the plot\n",
-    "    plt.show()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Plotting"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 235,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Plot\n",
-    "# fig, ax = plt.subplots()\n",
-    "# mplfinance.plot(ohlc_dec_1_day_15_min, type='candle', ax=ax, volume=False, show_nontrading=False)\n",
-    "# # add the psar scatterplot to the chart\n",
-    "# plt.scatter(df_psar.index, df_psar['PSAR'], color=df_psar['Color'], lw=0.5, label='PSAR')\n",
-    "# ax.set_xlabel('Date')\n",
-    "# ax.set_ylabel('Price')\n",
-    "# fig.suptitle('EURUSD 12/1/2023 15-min candlestick chart w/ PSAR')\n",
-    "# # increase the size of the chart\n",
-    "# fig.set_size_inches(18.5, 10.5)\n",
-    "\n",
-    "# plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Renko Charts"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 236,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # create a renko chart from the ohlc_dec_1 dataframe\n",
-    "# r = Renko(ohlc_dec_1, brick_size=0.0003)\n",
-    "# # create a new dataframe from the renko features\n",
-    "# renko_df_ready = r.renko_df()\n",
-    "# renko_high = np.array(renko_df_ready['high'])\n",
-    "# renko_low = np.array(renko_df_ready['low'])\n",
-    "# renko_close = np.array(renko_df_ready['close'])\n",
-    "# # recalculate psar for the renko chart\n",
-    "# psar_renko = np.empty_like(renko_high)\n",
-    "# for i in range(len(renko_high)):\n",
-    "#    psar_renko[i] = psar_obj.calcPSAR(renko_high[i], renko_low[i])\n",
-    "# # Create DataFrame\n",
-    "# df_psar_renko = pd.DataFrame({\n",
-    "#    'Close': renko_close,\n",
-    "#    'PSAR': psar_renko,\n",
-    "# })\n",
-    "# # add a new column to the dataframe that is 'red' if the psar is above the close and 'green' if the psar is below the close\n",
-    "# df_psar_renko['Color'] = np.where(df_psar_renko['PSAR'] > df_psar_renko['Close'], 'red', 'green')\n",
-    "\n",
-    "# # plot the renko chart\n",
-    "# fig, ax = plt.subplots()\n",
-    "# mplfinance.plot(renko_df_ready, type='candle', ax=ax, volume=False, show_nontrading=False)\n",
-    "# # add the psar scatterplot to the chart\n",
-    "# plt.scatter(df_psar_renko.index, df_psar_renko['PSAR'], color=df_psar_renko['Color'], lw=0.5, label='PSAR')\n",
-    "# ax.set_xlabel('Time')\n",
-    "# ax.set_ylabel('Price')\n",
-    "# fig.suptitle('EURUSD 12/4/2023 Renko chart w/ PSAR')\n",
-    "# # increase the size of the chart\n",
-    "# fig.set_size_inches(18.5, 10.5)\n",
-    "\n",
-    "# plt.show()\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 237,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# df_psar_renko.index"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Testing Data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 238,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -688,7 +505,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Renko charts (from 1 min data)"
+    "## Renko charts (from tick data)"
    ]
   },
   {
@@ -850,15 +667,16 @@
     }
    ],
    "source": [
-    "# Renko variable\n",
-    "brick_size = 0.0003\n",
+    "if use_full_data:\n",
+    "    # Renko variable\n",
+    "    brick_size = 0.0003\n",
     "\n",
-    "# create a renko chart from the ohlc_dec_1 dataframe\n",
-    "r_full = Renko(ohlc, brick_size=brick_size)\n",
-    "# create a new dataframe from the renko features\n",
-    "renko_full_data = r_full.renko_df()\n",
-    "# renko_full_data = fx.psar_from_data(renko_full_data, increment, maximum)\n",
-    "renko_full_data.tail(10)"
+    "    # create a renko chart from the ohlc_dec_1 dataframe\n",
+    "    r_full = Renko(ohlc, brick_size=brick_size)\n",
+    "    # create a new dataframe from the renko features\n",
+    "    renko_full_data = r_full.renko_df()\n",
+    "    # renko_full_data = fx.psar_from_data(renko_full_data, increment, maximum)\n",
+    "    renko_full_data.tail(10)"
    ]
   },
   {
@@ -867,8 +685,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# save renko to csv\n",
-    "renko_full_data.to_csv('renko_full_data.csv')"
+    "if use_full_data:\n",
+    "    # save renko to csv\n",
+    "    renko_full_data.to_csv('renko_full_data.csv')"
    ]
   },
   {
