no significant changes

--- a/double3_sma_nb.ipynb
+++ b/double3_sma_nb.ipynb
@@ -916,6 +916,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Entry conditions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 272,
    "metadata": {},
@@ -1280,7 +1287,8 @@
     "renko_full_data['day_of_week'] = renko_full_data.index.day_name()\n",
     "# place a 1 in day_of_week_transition, if it is the last bar on Friday and the next bar is Sunday\n",
     "renko_full_data['day_of_week_transition'] = np.where((renko_full_data['day_of_week'] == 'Friday') & \n",
-    "                                                     ((renko_full_data['day_of_week'].shift(-1) == 'Sunday') | (renko_full_data['day_of_week'].shift(-1) == 'Monday') |\n",
+    "                                                     ((renko_full_data['day_of_week'].shift(-1) == 'Sunday') | \n",
+    "                                                      (renko_full_data['day_of_week'].shift(-1) == 'Monday') |\n",
     "                                                      (renko_full_data['day_of_week'].shift(-1) == 'Tuesday')), 1, 0)"
    ]
   },
@@ -1305,13 +1313,6 @@
    ],
    "source": [
     "renko_full_data.columns"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Entry conditions"
    ]
   },
   {
@@ -2452,15 +2453,6 @@
     "                                           np.where((renko_full_data['sma_signal'] == 'sell') & (renko_full_data['high'] > renko_full_data['stop_loss']), 1, 0))\n",
     "stop_loss_hit_df = renko_full_data[renko_full_data['stop_loss_hit'] == 1]\n",
     "# stop_loss_hit_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 283,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# renko_full_data[renko_full_data['cum_position_count'] == 46]"
    ]
   },
   {
