ran with 1 pip renko charts and edited the charts so that they work better

--- a/double3_sma_nb.ipynb
+++ b/double3_sma_nb.ipynb
@@ -31,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "use_full_data = False"
+    "use_full_data = True"
    ]
   },
   {
@@ -298,7 +298,7 @@
    "source": [
     "if use_full_data:\n",
     "    # Renko variable\n",
-    "    brick_size = 0.0003\n",
+    "    brick_size = 0.0001\n",
     "\n",
     "    # create a renko chart from the ohlc_dec_1 dataframe\n",
     "    r_full = Renko(ohlc, brick_size=brick_size)\n",
@@ -340,7 +340,7 @@
    "outputs": [],
    "source": [
     "# Renko variable\n",
-    "brick_size = 0.0003\n",
+    "brick_size = 0.0001\n",
     "\n",
     "# psar variables\n",
     "start = 0.02\n",
