prepped with different pip size of 2, and changed renko_full_data.csv to have the brick_size at the end instead of overwriting it

--- a/double3_sma_nb.ipynb
+++ b/double3_sma_nb.ipynb
@@ -31,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "use_full_data = False"
+    "use_full_data = True"
    ]
   },
   {
@@ -298,7 +298,7 @@
    "source": [
     "if use_full_data:\n",
     "    # Renko variable\n",
-    "    brick_size = 0.0001\n",
+    "    brick_size = 0.0002\n",
     "\n",
     "    # create a renko chart from the ohlc_dec_1 dataframe\n",
     "    r_full = Renko(ohlc, brick_size=brick_size)\n",
@@ -340,7 +340,7 @@
    "outputs": [],
    "source": [
     "# Renko variable\n",
-    "brick_size = 0.0001\n",
+    "brick_size = 0.0002\n",
     "\n",
     "# psar variables\n",
     "start = 0.02\n",
@@ -537,7 +537,7 @@
    ],
    "source": [
     "# read in the renko data\n",
-    "renko_full_data = pd.read_csv('renko_full_data.csv')\n",
+    "renko_full_data = pd.read_csv(f'renko_full_data{brick_size}.csv')\n",
     "# convert date to datetime\n",
     "renko_full_data['datetime'] = pd.to_datetime(renko_full_data['datetime'], format='%Y-%m-%d %H:%M:%S.%f')\n",
     "renko_full_data = renko_full_data.set_index('datetime')\n",
